add politic, add footer

--- a/index.html
+++ b/index.html
@@ -120,50 +120,35 @@
           <div class="program__items">
             <div class="program__item">
               <div class="program__item-num">день 1</div>
-              <div class="program__item-date">25.04</div>
+              <div class="program__item-date">04.04</div>
               <ul class="program__item-list">
-                <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
-                </li>
-                <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
-                </li>
+                <li class="program__item-list-elem">Заселение партнеров в отель</li>
+                <li class="program__item-list-elem">Регистрация на конференцию</li>
               </ul>
             </div>
             <div class="program__item">
               <div class="program__item-num">день 2</div>
-              <div class="program__item-date">25.04</div>
+              <div class="program__item-date">05.04</div>
               <ul class="program__item-list">
-                <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
-                </li>
-                <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
-                </li>
+                <li class="program__item-list-elem">Бизнес-конференция. Выступление спикеров</li>
+                <li class="program__item-list-elem">Выезд на строительный объект компании</li>
               </ul>
             </div>
             <div class="program__item">
               <div class="program__item-num">день 3</div>
-              <div class="program__item-date">25.04</div>
+              <div class="program__item-date">06.04</div>
               <ul class="program__item-list">
+                <li class="program__item-list-elem">Брифинг с основателями компании</li>
                 <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
-                </li>
-                <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
+                  Гала ужин. Церемония признания и награждения
                 </li>
               </ul>
             </div>
             <div class="program__item">
               <div class="program__item-num">день 4</div>
-              <div class="program__item-date">25.04</div>
+              <div class="program__item-date">07.04</div>
               <ul class="program__item-list">
-                <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
-                </li>
-                <li class="program__item-list-elem">
-                  Пункт такой нормальный типа большой но вообще средненький получается
-                </li>
+                <li class="program__item-list-elem">Завершающий день. Выезд партнеров из отеля</li>
               </ul>
             </div>
           </div>
@@ -211,6 +196,21 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__img"><img src="./img/footer/img.png" alt="" /></div>
+          <div class="footer__pics">
+            <div class="footer__pic"><img src="./img/footer/pics/1.png" alt="" /></div>
+            <div class="footer__pic"><img src="./img/footer/pics/2.png" alt="" /></div>
+            <div class="footer__pic footer__map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.2278235329463!2d44.87357249999999!3d41.7156025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044127fb7627d75%3A0x1fba3a54ea818039!2sHotels%20%26%20Preference%20Hualing%20Tbilisi!5e0!3m2!1sru!2sua!4v1706456837661!5m2!1sru!2sua"
+                width="100%"
+                height="100%"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
           <div class="footer__content">
             <div class="footer__title">Уважаемые участники, обратите внимание!</div>
             <div class="footer__text">
@@ -223,6 +223,72 @@
             <a href="https://t.me/booking_hualing" target="_blank" class="footer__btn btn"
               >Забронировать проживание</a
             >
+          </div>
+        </div>
+      </div>
+      <div class="footer__social">
+        <div class="footer__social-item">
+          <div class="footer__logo logo"><img src="./img/logo.svg" alt="" /></div>
+          <div class="footer__social-content">
+            <div class="footer__social-title">Соц. сети</div>
+            <div class="footer__social-elems">
+              <a href="" target="_blank" class="footer__social-elem"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="15"
+                  viewBox="0 0 18 15"
+                  fill="none"
+                >
+                  <path
+                    d="M7.06305 9.49056L6.7653 13.511C7.19131 13.511 7.37581 13.3353 7.59707 13.1244L9.59436 11.292L13.733 14.2015C14.492 14.6076 15.0267 14.3937 15.2315 13.5312L17.9481 1.31141L17.9488 1.31069C18.1896 0.233571 17.5431 -0.187627 16.8035 0.0766116L0.835653 5.9453C-0.254123 6.35138 -0.237622 6.93458 0.650399 7.19881L4.73275 8.41777L14.2152 2.72188C14.6615 2.4382 15.0672 2.59516 14.7335 2.87884L7.06305 9.49056Z"
+                    fill="white"
+                    fill-opacity="0.5"
+                  />
+                </svg>
+                <p>Канал Asgard International</p></a
+              >
+              <a href="" target="_blank" class="footer__social-elem"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="15"
+                  viewBox="0 0 18 15"
+                  fill="none"
+                >
+                  <path
+                    d="M7.06305 9.49056L6.7653 13.511C7.19131 13.511 7.37581 13.3353 7.59707 13.1244L9.59436 11.292L13.733 14.2015C14.492 14.6076 15.0267 14.3937 15.2315 13.5312L17.9481 1.31141L17.9488 1.31069C18.1896 0.233571 17.5431 -0.187627 16.8035 0.0766116L0.835653 5.9453C-0.254123 6.35138 -0.237622 6.93458 0.650399 7.19881L4.73275 8.41777L14.2152 2.72188C14.6615 2.4382 15.0672 2.59516 14.7335 2.87884L7.06305 9.49056Z"
+                    fill="white"
+                    fill-opacity="0.5"
+                  />
+                </svg>
+                <p>Официальный канал мероприятия</p></a
+              >
+              <a href="" target="_blank" class="footer__social-elem"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="15"
+                  viewBox="0 0 18 15"
+                  fill="none"
+                >
+                  <path
+                    d="M7.06305 9.49056L6.7653 13.511C7.19131 13.511 7.37581 13.3353 7.59707 13.1244L9.59436 11.292L13.733 14.2015C14.492 14.6076 15.0267 14.3937 15.2315 13.5312L17.9481 1.31141L17.9488 1.31069C18.1896 0.233571 17.5431 -0.187627 16.8035 0.0766116L0.835653 5.9453C-0.254123 6.35138 -0.237622 6.93458 0.650399 7.19881L4.73275 8.41777L14.2152 2.72188C14.6615 2.4382 15.0672 2.59516 14.7335 2.87884L7.06305 9.49056Z"
+                    fill="white"
+                    fill-opacity="0.5"
+                  />
+                </svg>
+                <p>Support</p></a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="footer__social-item">
+          <div class="footer__social-links">
+            <a href="./privacy-policy.html" target="_blank" class="footer__social-link"
+              >Политика конфиденциальности</a
+            >
+            <a href="" target="_blank" class="footer__social-link">Пользовательское соглашение</a>
           </div>
         </div>
       </div>
