add politic, add footer

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <div class="footer__social-content">
             <div class="footer__social-title">Соц. сети</div>
             <div class="footer__social-elems">
-              <a href="" target="_blank" class="footer__social-elem"
+              <a href="https://t.me/AsgardInternational" target="_blank" class="footer__social-elem"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
@@ -248,7 +248,7 @@
                 </svg>
                 <p>Канал Asgard International</p></a
               >
-              <a href="" target="_blank" class="footer__social-elem"
+              <a href="https://t.me/asgardtbilisi" target="_blank" class="footer__social-elem"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
@@ -264,7 +264,7 @@
                 </svg>
                 <p>Официальный канал мероприятия</p></a
               >
-              <a href="" target="_blank" class="footer__social-elem"
+              <a href="https://t.me/asgard_support_bot" target="_blank" class="footer__social-elem"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
