add politic, add footer

--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
             <a href="./privacy-policy.html" target="_blank" class="footer__social-link"
               >Политика конфиденциальности</a
             >
-            <a href="" target="_blank" class="footer__social-link">Пользовательское соглашение</a>
+            <a href="./offer.html" target="_blank" class="footer__social-link"
+              >Пользовательское соглашение</a
+            >
           </div>
         </div>
       </div>
