add politic, add footer

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               >Политика конфиденциальности</a
             >
             <a href="./offer.html" target="_blank" class="footer__social-link"
-              >Пользовательское соглашение</a
+              >Оферта на приобретение билета</a
             >
           </div>
         </div>
