add politic, add footer

--- a/offer.html
+++ b/offer.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>ОФЕРТА</title>
+    <title>Оферта на приобретение билета</title>
   </head>
   <body class="--light">
     <div class="documentation">
