edit program section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <div class="program__item-date">05.04</div>
               <ul class="program__item-list">
                 <li class="program__item-list-elem">Бизнес-конференция. Выступление спикеров</li>
-                <li class="program__item-list-elem">Выезд на строительный объект компании</li>
+                <li class="program__item-list-elem">Свободное времяпрепровождение</li>
               </ul>
             </div>
             <div class="program__item">
@@ -139,9 +139,7 @@
               <div class="program__item-date">06.04</div>
               <ul class="program__item-list">
                 <li class="program__item-list-elem">Брифинг с основателями компании</li>
-                <li class="program__item-list-elem">
-                  Гала ужин. Церемония признания и награждения
-                </li>
+                <li class="program__item-list-elem">Выезд на строительный объект компании</li>
               </ul>
             </div>
             <div class="program__item">
