edit program section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
               <ul class="program__item-list">
                 <li class="program__item-list-elem">Брифинг с основателями компании</li>
                 <li class="program__item-list-elem">Выезд на строительный объект компании</li>
+                <li class="program__item-list-elem">
+                  Гала ужин. Церемония признания и награждения
+                </li>
               </ul>
             </div>
             <div class="program__item">
