edit program section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </div>
           </div>
           <div class="cover__desc">
-            <p><span>Приобрести билеты</span> вы можете через лидеров компании</p>
+            <p>
+              <span>Приобрести билеты</span> вы можете через <nobr>топ-менеджеров</nobr> компании
+            </p>
           </div>
         </div>
       </div>
